<resources>
    <string name="app_name">Password</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">Main Menu</string>
    <string name="second_fragment_label">Forgotten Password</string>
    <string name="third_fragment_label">Register</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="title">Password Manager</string>

    <string name="email_hint">Enter Email</string>
    <string name="name_hint">Enter Name</string>
    <string name="phone_hint">Enter Phone Number</string>
    <string name="password_hint">Enter Password</string>
    <string name="appName_hint">Enter App/Company Name</string>
    <string name="username_hint">Enter Associated Username/Email</string>
    <string name="category_hint">Choose Category</string>
    <string name="confirmPassword_hint">Confirm Password</string>
    <string name="length_hint">Length of password...</string>
    <string name="capital_hint">No. of capitalised letters...</string>
    <string name="numbers_hint">No. of digits...</string>
    <string name="special_hint">No. of special characters...</string>
    <string name="hidden_hint">Password is hidden...</string>


    <string name="forgot">Have you forgotten your password?</string>
    <string name="register">Don\'t have an account? Register here!</string>

    <string name="addPassword">Create New Password</string>
    <string name="addFolder">Create New Category</string>
    <string name="generate">Auto Generate</string>


    <string name="delete">Delete</string>
    <string name="movef">Move Folder</string>
    <string name="valid">Valid for... (days)</string>

    <string name="contact">Contact Us / About</string>
    <string name="change_master">Change Master Password</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="twofa">2FA</string>
    <string name="wipe">Wipe Database</string>
    <string name="fingerprint">Fingerprint Log-in</string>
    <string name="language">Language:</string>
    <string name="none">None:</string>


    <string name="forgot_prompt">Every password stored in this app is encrypted and decrypted using the master key. As a result,
        if you have forgotten your master password, you cannot retrieve your stored passwords.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_expired">Expired</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>


    <string name="tfa_title">Authentication Methods</string>
    <string name="otp">Phone Number OTP</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
</resources>