<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/green"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="Settings"
        android:textSize="18sp"
        android:textStyle="bold" /> <!-- Add margin -->

    <TextView
        android:id="@+id/language_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/language" />

    <Spinner
        android:id="@+id/language_in"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:prompt="@string/language" /> <!-- Add margin -->

    <Switch
        android:id="@+id/dark_in"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:checked="false"
        android:text="@string/dark_mode" /> <!-- Add margin -->

    <!-- Add margin -->

    <!-- Add margin -->

    <!-- Add margin -->

    <TextView
        android:id="@+id/twofa"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:gravity="center"
        android:text="@string/twofa" />

    <TextView
        android:id="@+id/contact_in"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:gravity="center"
        android:text="@string/contact" />

    <TextView
        android:id="@+id/changeMaster_in"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:gravity="center"
        android:text="@string/change_master" />
</LinearLayout>
