<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Views.PasswordFragment" >

    <EditText
        android:id="@+id/password_in"
        android:layout_width="260dp"
        android:layout_height="49dp"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:hint="@string/password_hint"
        android:inputType="text"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/category_in" />

    <EditText
        android:id="@+id/username_in"
        android:layout_width="259dp"
        android:layout_height="51dp"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:hint="@string/username_hint"
        android:inputType="text"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/app_name_in" />

    <EditText
        android:id="@+id/app_name_in"
        android:layout_width="216dp"
        android:layout_height="52dp"
        android:layout_marginTop="112dp"
        android:ems="10"
        android:hint="@string/appName_hint"
        android:inputType="text"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/category_in"
        android:layout_width="249dp"
        android:layout_height="54dp"
        android:layout_marginTop="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/username_in" />

    <Button
        android:id="@+id/add_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="88dp"
        android:text="@string/addPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/valid_in"
        android:layout_width="147dp"
        android:layout_height="46dp"
        android:layout_marginEnd="44dp"
        android:layout_marginBottom="24dp"
        android:ems="10"
        android:hint="@string/valid"
        android:inputType="number"
        app:layout_constraintBottom_toTopOf="@+id/add_password"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>