<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph2"
    app:startDestination="@id/MainFragment">

    <fragment
        android:id="@+id/MainFragment"
        android:name="com.example.password.Views.MainFragment"
        android:label="@string/title"
        tools:layout="@layout/fragment_item_list">


        <action
            android:id="@+id/action_MainFragment_to_PasswordFragment"
            app:destination="@id/PasswordFragment" />

        <action
            android:id="@+id/action_to_ViewFragment"
            app:destination="@id/ViewFragment" />

    </fragment>

    <fragment
        android:id="@+id/PasswordFragment"
        android:name="com.example.password.Views.PasswordFragment"
        android:label="@string/title"
        tools:layout="@layout/fragment_password">
        <action
            android:id="@+id/action_PasswordFragment_to_GenerateFragment"
            app:destination="@id/GenerateFragment" />
    </fragment>

    <fragment
        android:id="@+id/GenerateFragment"
        android:name="com.example.password.Views.GenerateFragment"
        android:label="@string/generate"
        tools:layout="@layout/fragment_generate">
    </fragment>

    <fragment
        android:id="@+id/ViewFragment"
        android:name="com.example.password.Views.ViewFragment"
        android:label="@string/title"
        tools:layout="@layout/fragment_view">

    </fragment>

    <fragment
        android:id="@+id/ExpiredFragment"
        android:name="com.example.password.Views.ExpiredFragment"
        android:label="@string/title_expired"
        tools:layout="@layout/fragment_expired_list">

        <action
            android:id="@+id/action_to_ViewFragment"
            app:destination="@id/ViewFragment" />

    </fragment>





</navigation>